--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ html{
 }
 
 .heading{
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     text-align: center;
     font-size: 2rem;
     color: var(--Very-Dark-Blue);
@@ -56,6 +59,14 @@ html{
     margin: auto;
     color: var(--Grayish-Blue);
     font-size: 1.7rem;
+}
+
+.heading img{
+    /* box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3); */
+    margin: 10px;
+    filter: grayscale(100%);
+    align-items: baseline;
+    
 }
 
 
